3rd update push home

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 	<div class="container-fluid px-0">
 		
 		<header id="contact-header" class="jumbotron mb-0">
-			<h1 id="landing-contact" class="d-none d-md-block"> WE ARE EXCITED TO WORK WITH YOU </h1>
+			<h1 id="landing-contact" class="d-md-block"> WE ARE EXCITED TO WORK WITH YOU </h1>
 		</header>
 
 		<!-- start nav -->
@@ -69,13 +69,15 @@
 		<div class="container-fluid">
 
 			<div class="row p-5">
-				<div class="col-md-6">
-					<h1 class="px-5 pt-5"> VantagePoint will chuchu ekek </h1>
-					<p class="px-5"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam </p>
-					<h1 class="px-5"> Google Map Us! </h1>
+				<div class="col-lg-6 contact-top">
+					<h1 class="px-5 pt-5"> VantagePoint Trading and Consultancy Inc. </h1>
+					<h4 class="px-5 pt-4"> Blk 16 Lot 62 Golden City, Brgy. Salawag, Dasmariñas City, Cavite </h4>
+					<h4 class="px-5 pt-4 contact-email"> vantagepointconsultancy@gmail.com </h4>
+					<h4 class="px-5 pt-3 contact-ll"> (02) 400 4046 </h4>
+					<h4 class="px-5 contact-mb"> +63 956 872 0280 </h4>
+					<h1 class="px-5 pt-5"> Google Map Us! </h1>
 				</div>	
-				<div class="col-md-4 contact-form p-3">
+				<div class="col-lg-4 contact-form p-3">
 					<form>
 						<div class="form-group">
 							<label for="username">Name</label>
@@ -94,7 +96,7 @@
 
 						<div class="form-group">
 							<label for="inquiry">Inquiry</label>
-							<textarea id="textarea" class="form-control" placeholder="Your Inquiry"></textarea>
+							<textarea id="textarea" rows="4" class="form-control" placeholder="Your Inquiry"></textarea>
 						</div>
 						<!-- end form group -->
 
@@ -104,22 +106,73 @@
 				<!-- end form -->
 			</div>
 			<!-- end row -->
-			<div class="row pt-0">
-				<div class="col-md-6 offset-md-1">
-					<iframe class="embed-responsive-item gmap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.731259356584!2d121.03125941399705!3d14.55735468983004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c9b8d33b2c6d%3A0xb0c2f766338a92bd!2sZuitt%20Makati!5e0!3m2!1sen!2sph!4v1583289762462!5m2!1sen!2sph" frameborder="0" allowfullscreen=""></iframe>
+
+			<div class="row contact-map">
+				<div class="col-lg-6 offset-lg-1">
+					<iframe class="embed-responsive-item gmap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3865.3627034774445!2d120.97878881466157!3d14.348409289963516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397d41b93a8c49d%3A0x59efd66d28663958!2sGolden%20City!5e0!3m2!1sen!2sph!4v1583330817460!5m2!1sen!2sph"  frameborder="0" allowfullscreen=""></iframe>
+				</div>
+				<div class="col-lg-4 p-5">
+					<img id="lost" src="assets/images/lost1.gif">
 				</div>
 				<!-- end map -->	
 			</div>
 			<!-- end row -->
 
-
 		</div>
 		<!-- end container -->
-
-		
 		
 	</div>
 	<!-- end container -->
+
+	<!-- start contact -->
+	<div class="container-fluid">
+		<section id="contact">
+			<h1 class="text-center pt-5"> QUICK CONTACT </h1>
+			<hr>
+			<div class="row pb-3">
+				<div class="col-md-12">
+					<div class="row">
+						<div id="qcontact-phone" class="col-md-4 text-right qcontact">
+							<a href="#" class="link">
+								<i class="fas fa-mobile-alt"></i>
+								<h4 class="mb-0 call">Call us on</h4>
+								<p class="p-link">+63 956 872 0280</p>
+							</a>
+						</div>
+						<div id="qcontact-gmail" class="col-md-4 text-center qcontact">
+							<a href="contact.html" class="link">
+								<i class="far fa-paper-plane"></i>
+								<h4 class="mb-0 mail">For business inquiries</h4>
+								<p class="p-link">vantagepointconsultancy@gmail.com</p>
+							</a>
+						</div>
+						<div id="qcontact-fb" class="col-md-4 text-left qcontact">
+							<a href="https://www.facebook.com/VPTCI/" target="_blank" class="link">
+								<i class="fab fa-facebook-f"></i>
+								<h4 class="mb-0 chat">Let's chat</h4>
+								<p class="p-link">@VPTCI</p>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- end contact -->
+
+		<!-- start footer -->
+		<footer>
+			<div class="row">
+				<div class="col-md-4 offset-md-4 footer">
+					<img src="assets/images/logo.png" id="footer-logo" class="image-fluid pt-3">
+					<p class="text-center mt-4">
+						All rights reserved &copy; 2020
+					</p>	
+				</div>
+			</div>
+		</footer>
+		<!-- end footer -->
+	</div>
+	<!-- end container contact / footer -->
 
 
 
