--- a/credentials.html
+++ b/credentials.html
@@ -14,6 +14,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Lora|Montserrat&display=swap" rel="stylesheet">
 
 	<!-- fontawesome -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
 	<!-- animate css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/animate.css">
@@ -27,6 +28,168 @@
 
 <body>
 
+	<div class="container-fluid px-0">
+		
+		<header id="credentials-header" class="jumbotron mb-0">
+			<h1 id="landing-credentials" class="d-md-block"> WE LEARN FROM FAILURE, NOT FROM SUCCESS </h1>
+		</header>
+
+		<!-- start nav -->
+		<nav class="navbar navbar-expand-md sticky-top">
+			<a href="#" class="navbar-brand">	
+				<img id="company-logo" src="assets/images/logo.png">
+			</a>
+
+			<button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-nav">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div id="navbar-nav" class="collapse navbar-collapse">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a href="home.html" class="nav-link active">Home</a>
+					</li>
+					<li class="nav-item">
+						<a href="home.html#about" class="nav-link">About</a>
+					</li>
+					<li class="nav-item">
+						<a href="home.html#services" class="nav-link">Services</a>
+					</li>
+					<li class="nav-item">
+						<a href="home.html#products" class="nav-link">Products</a>
+					</li>
+					<li class="nav-item">
+						<a href="#contact" class="nav-link">Contact</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+		<!-- end nav -->
+
+		<div class="container-fluid">
+			<div class="row text-center p-5">
+				<div class="col-md-4 col-lg-2 offset-lg-3 credentials-circles">
+					<img src="assets/images/sec.png" class="circle-sec">
+				</div>
+				<div class="col-md-4 col-lg-2 credentials-circles">
+					<img src="assets/images/bir.png" class="circle-bir">
+				</div>
+				<div class="col-md-4 col-lg-2 credentials-circles">
+					<img src="assets/images/cus.png" class="circle-cus">
+				</div>
+			</div>
+			<div class="row text-center p-5">
+				<div class="col-12">
+					<span class="alert alert-sec d-md-block">
+						Registration No. CS201733328
+					</span>
+					<span class="alert alert-bir d-md-block">
+						TIN No. 009 840 741 000
+					</span>
+					<span class="alert alert-cus d-md-block">
+						Registration No. CS201733328
+					</span>
+				</div>
+			</div>
+		</div>
+		<!-- end container -->
+
+
+		<div class="container-fluid">
+			<div class="row text-center p-5">
+				<div class="col-12 col-md-6 col-lg-3">
+					<div class="card">
+						<img src="./assets/images/SEC.jpg" class="card-img-top">
+						<div class="card-body">
+							<h3 class="card-title"> SEC Certificate </h3>
+						</div>
+					</div>
+				</div>
+				<!-- first card -->
+				<div class="col-12 col-md-6 col-lg-3">
+					<div class="card">
+						<img src="./assets/images/BIR.jpg" class="card-img-top">
+						<div class="card-body">
+							<h3 class="card-title"> BIR 2303 </h3>
+						</div>
+					</div>
+				</div>
+				<!-- second card -->
+				<div class="col-12 col-md-6 col-lg-3">
+					<div class="card">
+						<img src="./assets/images/BAR.jpg" class="card-img-top">
+						<div class="card-body">
+							<h3 class="card-title"> Barangay Certificate </h3>
+						</div>
+					</div>
+				</div>
+				<!-- third card -->
+				<div class="col-12 col-md-6 col-lg-3">
+					<div class="card">
+						<img src="./assets/images/BUS.jpg" class="card-img-top">
+						<div class="card-body">
+							<h3 class="card-title"> Business Permit </h3>
+						</div>
+					</div>
+				</div>
+				<!-- fourth card -->
+			</div>
+			<!-- end row -->
+		</div>
+		<!-- end container -->
+		
+	</div>
+	<!-- end container -->
+
+	<!-- start contact -->
+	<div class="container-fluid">
+		<section id="contact">
+			<h1 class="text-center pt-5"> QUICK CONTACT </h1>
+			<hr>
+			<div class="row pb-3">
+				<div class="col-md-12">
+					<div class="row">
+						<div id="qcontact-phone" class="col-md-4 text-right qcontact">
+							<a href="#" class="link">
+								<i class="fas fa-mobile-alt"></i>
+								<h4 class="mb-0 call">Call us on</h4>
+								<p class="p-link">+63 956 872 0280</p>
+							</a>
+						</div>
+						<div id="qcontact-gmail" class="col-md-4 text-center qcontact">
+							<a href="contact.html" class="link">
+								<i class="far fa-paper-plane"></i>
+								<h4 class="mb-0 mail">For business inquiries</h4>
+								<p class="p-link">vantagepointconsultancy@gmail.com</p>
+							</a>
+						</div>
+						<div id="qcontact-fb" class="col-md-4 text-left qcontact">
+							<a href="https://www.facebook.com/VPTCI/" target="_blank" class="link">
+								<i class="fab fa-facebook-f"></i>
+								<h4 class="mb-0 chat">Let's chat</h4>
+								<p class="p-link">@VPTCI</p>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- end contact -->
+
+		<!-- start footer -->
+		<footer>
+			<div class="row">
+				<div class="col-md-4 offset-md-4 footer">
+					<img src="assets/images/logo.png" id="footer-logo" class="image-fluid pt-3">
+					<p class="text-center mt-4">
+						All rights reserved &copy; 2020
+					</p>	
+				</div>
+			</div>
+		</footer>
+		<!-- end footer -->
+	</div>
+	<!-- end container contact / footer -->
 
 
 	<!-- bootstrap dependencies -->
